changed the commas in the skills section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0" />
 
     <!-- Google Web Font -->
-    <link href='https://fonts.googleapis.com/css2?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css2?family=Ubuntu:300,400,500,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css2?family=Lekton:400,700,400italic' rel='stylesheet' type='text/css'>
 
     <!--  Bootstrap 3-->
@@ -158,10 +158,10 @@
                         + &nbsp;editing for clarity<br>
                         <br>
                         + &nbsp;Adobe Creative Suite<br>
-                        + &nbsp;Figma + InVision<br>
-                        + &nbsp;HTML + CSS<br>
-                        + &nbsp;PowerPoint + Prezi<br>
-                        + &nbsp;Dropbox + Github<br>
+                        + &nbsp;Figma, &nbsp;InVision<br>
+                        + &nbsp;HTML, &nbsp;CSS<br>
+                        + &nbsp;PowerPoint, &nbsp;Prezi<br>
+                        + &nbsp;Dropbox, &nbsp;Github<br>
 
                     </p>
                 </div>
