--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <hr>
                         <h4>by Anastasia Farnum</h4>
                         <p>
-                        <br/>At the center of every project is the people. In all of the work I am involved in, I aspire to center the voices and experiences of the end users. This takes empathy, listening, and taking a step back to observe. I use creative critical thinking to generate new ideas or methods and to navigate through ambiguity. My professional background includes many mission driven projects as I continue to implement my values of inclusivity and representation in my work.</p>
+                        <br/>At the center of every project is the people. In all of the work I am involved in, I aspire to center the voices and experiences of the end users. This takes empathy, listening, and taking a step back to observe. I use creative critical thinking to generate new ideas + methods and to navigate through ambiguity. My professional background includes many mission driven projects as I continue to implement my values of inclusivity and representation in my work.</p>
                     </article>
                 </div>
             </div>
