--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <!-- Loader Style -->
     <link rel="stylesheet" href="css/loader-1.css">
 
-    <!-- Costum Styles -->
+    <!-- Custom Styles -->
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/responsive.css">
 
@@ -160,8 +160,9 @@
                         + &nbsp;Adobe Creative Suite<br>
                         + &nbsp;Figma, &nbsp;InVision<br>
                         + &nbsp;HTML, &nbsp;CSS<br>
-                        + &nbsp;PowerPoint, &nbsp;Prezi<br>
                         + &nbsp;Dropbox, &nbsp;Github<br>
+                        + &nbsp;PowerPoint, &nbsp;Prezi<br>
+                     
 
                     </p>
                 </div>
