--- a/index.html
+++ b/index.html
@@ -268,6 +268,21 @@
                         </div>
                     </div>
                     
+                       <!-- 4th Research project: Caring City-->
+                    <div class="col-md-4 col-sm-4 col-xs-12 mix branding">
+                        <div class="img home-portfolio-image">
+                            <img src="img/new_imgs/Thumbnail_Caring_City.png" alt="Portfolio Item">
+                            <div class="overlay-thumb">
+                                <div class="details">
+                                    <span class="title">A Caring City</span>
+                                    <span class="info">Design Research + Prototyping</span>
+                                </div>
+                                <span class="btnBefore"></span>
+                                <span class="btnAfter"></span>
+                                <a class="main-portfolio-link" href="Portfolio_Caring_City.html"></a>
+                            </div>
+                        </div>
+                    </div>
                     <!-- 1st Data Project --> 
                     <div class="col-md-4 col-sm-4 col-xs-12 mix web">
                         <div class="img home-portfolio-image">
