--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                         <br>
                         + &nbsp;Tableau<br>
                         + &nbsp;Microsoft Excel<br>
-                        + &nbsp;Google Data Studio<br>
-                        + &nbsp;ggplot2<br>
+                       <!-- + &nbsp;Google Data Studio<br> -->
+                       <!-- + &nbsp;ggplot2<br> -->
                         + &nbsp;R<br>     
                 </div>
                 
