--- a/Portfolio_HAM.html
+++ b/Portfolio_HAM.html
@@ -112,7 +112,8 @@
         <div class="col-md-4">
             <!-- alt p style style="font-size: 18px; line-height: 26px;" -->
             <h3><b>Context:</b></h3>
-            <p>At the time of this project, there hadn’t been any usability and accessibility run-throughs of the new space/experience created by combining the three Harvard Art Museums. Working under the department of Digital Infrastructures and Emerging Technology, I was tasked with making the first research initiatives.</p>
+            <p>At the time of this project, the Museums had not completed full on usability and accessibility run-throughs of all the digital interfaces. There were a lot of design (spatial + digital) changes that were made when the 3 Harvard Art Museums merged into one. Working under the department of Digital Infrastructures and Emerging Technology, I was set to run introductory user research initiatives
+            </p>
         </div>
         
         <div class="col-md-4">
